# Workspace: the engine core + Python (PyO3) bindings (`jungle_flip_rust`) and the
# standalone UCI binary (`jungle-flip-engine`). The binary `#[path]`-includes the engine
# core directly, so it has no crate dependency on `jungle_flip_rust` and builds without
# Python — `cargo build -p jungle-flip-engine` never compiles the PyO3 extension.
[workspace]
members = ["jungle_flip_rust", "jungle-flip-engine"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
