[package]
name = "jungle-flip-wasm"
version = "0.5.1"
edition = "2021"
authors = ["Brian Liou"]
description = "MistyJungleFlip — WebAssembly build of the Flip Jungle engine core for the in-browser review/analysis panel (client-side MultiPV)."
license = "MIT"
repository = "https://github.com/brianhliou/misty-flip-jungle"

# Like `jungle-flip-engine`, this crate `#[path]`-includes the engine core directly (game +
# endgame + engine), so it has no crate dependency on `jungle_flip_rust` and never pulls in
# PyO3. The real `flatdb` module uses `rayon` (no wasm threads), so this crate ships a tiny
# STUB `flatdb` instead — the browser engine never uses a tablebase (`db` is always `None`).
# Build with: `wasm-pack build jungle-flip-wasm --target web --release`.
[lib]
name = "jungle_flip_wasm"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
